--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tremor/react": "^3.18.6",
     "next": "15.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
